--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8081
+worker.timeoutSeconds=5
+worker.batchSize=5
+aggregate.timeout.seconds=10
+api.host.baseurl=http://localhost:8080
